#58 Fixed layout broken

--- a/src/Zerebral/FrontendBundle/Resources/public/less/app.less
+++ b/src/Zerebral/FrontendBundle/Resources/public/less/app.less
@@ -246,6 +246,7 @@ h2.form-title {
     font-size: 28px;
     font-weight: normal;
     margin-top: 10px;
+    overflow: hidden;
 }
 
 .rounded {
@@ -314,4 +315,5 @@ h2.form-title {
     padding-left: 20px;
     padding-right: 5px;
     display: inline-block;
+    overflow: hidden;
 }
