--- a/src/Zerebral/FrontendBundle/Resources/public/less/course.less
+++ b/src/Zerebral/FrontendBundle/Resources/public/less/course.less
@@ -376,6 +376,8 @@
             .details {
                 display: inline-block;
                 margin-left: 20px;
+                width: @listWidth - 75;
+                overflow: hidden;
                 .title {
                     h3 {
                         font-size: 16px;
@@ -426,6 +428,13 @@
     }
     .right-navbar {
         .folders {
+            li {
+                a.folder-name {
+                    width: 170px;
+                    overflow: hidden;
+                    display: inline-block;
+                }
+            }
             .manage {
                 float: right;
                 .manage-buttons-gears {
