--- a/src/Zerebral/FrontendBundle/Resources/public/less/list.less
+++ b/src/Zerebral/FrontendBundle/Resources/public/less/list.less
@@ -17,6 +17,7 @@
         min-width: @listWidth;
         margin-left: 0;
         margin-top: 15px;
+        overflow: hidden;
 
         &.teacher-role {
             margin-top: 0;
